[package]
name = "mechanus_bot"
version = "0.1.0"
authors = ["Nyl0k <colin.s.frazer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.9",features=["framework", "standard_framework","rustls_backend"] }
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
macros = { path = "macros" }